--- a/acapulco.thirdpartyplugins/.classpath
+++ b/acapulco.thirdpartyplugins/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="lib/aima-core-3.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/moeaframework-2.13.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/org.sat4j.core-2.3.1.jar"/>
