--- a/acapulco.thirdpartyplugins/.classpath
+++ b/acapulco.thirdpartyplugins/.classpath
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-12">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="lib/aima-core-3.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/moeaframework-2.13.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/org.sat4j.core-2.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/picocli-4.2.0.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-12"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-lang3-3.8.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
