--- a/acapulco.thirdpartyplugins/build.properties
+++ b/acapulco.thirdpartyplugins/build.properties
@@ -5,8 +5,11 @@ bin.includes = META-INF/,\
                lib/aima-core-3.0.0.jar,\
                lib/moeaframework-2.13.jar,\
                lib/org.sat4j.core-2.3.1.jar,\
-               lib/picocli-4.2.0.jar
+               lib/picocli-4.2.0.jar,\
+               lib/commons-lang3-3.8.1.jar
 jars.extra.classpath = lib/aima-core-3.0.0.jar,\
                        lib/moeaframework-2.13.jar,\
                        lib/org.sat4j.core-2.3.1.jar,\
-                       lib/picocli-4.2.0.jar
+                       lib/picocli-4.2.0.jar,\
+               			lib/commons-lang3-3.8.1.jar
+               		
