--- a/comparator-tools/satibea/SATIBEA/.classpath
+++ b/comparator-tools/satibea/SATIBEA/.classpath
@@ -10,6 +10,6 @@
 	<classpathentry kind="lib" path="lib/org.sat4j.core_trunk2.jar"/>
 	<classpathentry kind="lib" path="lib/jmetal4.5.jar"/>
 	<classpathentry kind="lib" path="lib/picocli-4.2.0.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/metrics"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/acapulco.metrics"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
