--- a/acapulco.metrics/.classpath
+++ b/acapulco.metrics/.classpath
@@ -13,5 +13,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry kind="lib" path="lib/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/guava-30.0-jre.jar"/>
+	<classpathentry kind="lib" path="lib/opencsv-1.8.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
