--- a/comparator-tools/satibea/SATIBEA/.classpath
+++ b/comparator-tools/satibea/SATIBEA/.classpath
@@ -6,10 +6,9 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/org.sat4j.core_2_0_5_2.jar"/>
-	<classpathentry kind="lib" path="lib/org.sat4j.core_trunk2.jar"/>
-	<classpathentry kind="lib" path="lib/jmetal4.5.jar"/>
 	<classpathentry kind="lib" path="lib/picocli-4.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/org.sat4j.core-2.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/moeaframework-2.13.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/acapulco.metrics"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
