--- a/acapulco.pipeline/.classpath
+++ b/acapulco.pipeline/.classpath
@@ -7,7 +7,7 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="lib" path="lib/commons-exec-1.3.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/MODAGAME_algorithm"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/SATIBEA"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
