--- a/acapulco.thirdpartyplugins/.classpath
+++ b/acapulco.thirdpartyplugins/.classpath
@@ -2,6 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="lib/beedeedee.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-math3-3.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/guava-30.0-jre.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/opencsv-1.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-cli-1.4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-12">
 		<attributes>
 			<attribute name="module" value="true"/>
