--- a/acapulco.thirdpartyplugins/build.properties
+++ b/acapulco.thirdpartyplugins/build.properties
@@ -7,7 +7,10 @@ bin.includes = META-INF/,\
                lib/org.sat4j.core-2.3.1.jar,\
                lib/picocli-4.2.0.jar,\
                lib/commons-lang3-3.8.1.jar,\
-               lib/beedeedee.jar
+               lib/beedeedee.jar,\
+               lib/commons-math3-3.6.1.jar,\
+               lib/guava-30.0-jre.jar,\
+               lib/opencsv-1.8.jar
 jars.extra.classpath = lib/aima-core-3.0.0.jar,\
                        lib/moeaframework-2.13.jar,\
                        lib/org.sat4j.core-2.3.1.jar,\
