--- a/acapulco.featureide/plugin.xml
+++ b/acapulco.featureide/plugin.xml
@@ -5,14 +5,14 @@
          point="org.eclipse.ui.popupMenus">
       <objectContribution
             adaptable="false"
-            id="MDEOptimiser4EFM.featureide.objectContribution2"
+            id="acapulco.featureide.objectContribution2"
             nameFilter="model.xml"
             objectClass="org.eclipse.core.resources.IFile">
          <action
-               class="mdeoptimiser4efm.featureide.actions.CreateFMAction"
+               class="acapulco.featureide.actions.CreateFMAction"
                enablesFor="1"
-               id="MDEOptimiser4EFM.featureide.action2"
-               label="Transform to MDEOptimiser4EFM"
+               id="acapulco.featureide.action2"
+               label="Transform to ACAPULCO EFM"
                menubarPath="additions">
          </action>
       </objectContribution>
