--- a/acapulco.cpcogen/src/main/xtend-gen/acapulco/rulesgeneration/activationdiagrams/.gitignore
+++ b/acapulco.cpcogen/src/main/xtend-gen/acapulco/rulesgeneration/activationdiagrams/.gitignore
@@ -20,3 +20,5 @@
 /*.java
 /*.xtendbin
 /.VBRuleFeatureConstraintGenerator.java._trace
+/.OrImplicationGraph.java._trace
+/.OrImplicationDotGenerator.java._trace
