WiP for paper illustrations

--- a/acapulco.cpcogen/src/main/xtend-gen/acapulco/rulesgeneration/activationdiagrams/.gitignore
+++ b/acapulco.cpcogen/src/main/xtend-gen/acapulco/rulesgeneration/activationdiagrams/.gitignore
@@ -22,3 +22,4 @@
 /.VBRuleFeatureConstraintGenerator.java._trace
 /.OrImplicationGraph.java._trace
 /.OrImplicationDotGenerator.java._trace
+/.FADDotGenerator.java._trace
